<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bgb"
    tools:context=".ui.LoginActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:layout_width="@dimen/_90sdp"
            android:id="@+id/logo"
            android:layout_height="@dimen/_90sdp"
            android:layout_marginTop="@dimen/_60sdp"
            android:src="@drawable/logo_white"
            android:layout_centerHorizontal="true" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/nameApp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/logo"
            android:layout_marginTop="@dimen/_5sdp"
            android:textSize="@dimen/_18sdp"
            android:textStyle="bold"
            android:text="Company Login"
            android:layout_centerHorizontal="true"
            android:textColor="#F8F8F8" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/nameApp"
            android:layout_marginTop="@dimen/_60sdp"
            android:layout_centerHorizontal="true"
            android:layout_marginStart="@dimen/_30sdp"
            android:layout_marginEnd="@dimen/_30sdp"
            android:orientation="vertical">


            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/email"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_40sdp"
                android:padding="@dimen/_10sdp"
                android:textSize="@dimen/_12sdp"
                android:textStyle="bold"
                android:textColor="@color/gray"
                android:textColorHint="@color/gray"
                android:background="@drawable/background_edit_text"
                android:hint="@string/user_name" />


            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/password"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_40sdp"
                android:layout_marginTop="@dimen/_10sdp"
                android:background="@drawable/background_edit_text"
                android:hint="@string/password"
                android:padding="@dimen/_10sdp"
                android:textSize="@dimen/_12sdp"
                android:textColor="@color/gray"
                android:textColorHint="@color/gray"
                android:textStyle="bold" />

                <TextView
                    android:id="@+id/error"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/error_email"
                    android:textColor="#000000"
                    android:layout_marginStart="@dimen/_8sdp"
                    android:textSize="@dimen/_12sdp"
                    android:visibility="gone"
                    />
            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/btnLogin"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_35sdp"
                android:layout_marginTop="@dimen/_40sdp"
                android:gravity="center"
                android:background="@drawable/background_login_btn"
                android:textColor="@color/black"
                android:textStyle="bold"
                android:text="@string/login" />

            <LinearLayout
                android:layout_marginTop="@dimen/_5sdp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:orientation="horizontal">

                <androidx.appcompat.widget.AppCompatTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/black"
                    android:text="@string/donot_have_account" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/btnRegstrion"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/white"
                    android:layout_marginStart="@dimen/_3sdp"
                    android:text="@string/create_account" />

            </LinearLayout>

        </LinearLayout>
    </RelativeLayout>

</ScrollView>