<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/MyGray"
    tools:context=".ui.CreatePostActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <include
            android:id="@+id/header_post"
            layout="@layout/header" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="@dimen/_8sdp"
            android:layout_marginTop="@dimen/_15sdp"
            android:layout_marginEnd="@dimen/_8sdp"
            android:orientation="vertical">

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/title"
                android:textSize="@dimen/_12sdp"
                android:textColor="@color/gray"
                android:layout_marginStart="@dimen/_8sdp"
                android:layout_marginTop="@dimen/_10sdp"/>

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/titlePost"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_40sdp"
                android:background="@drawable/background_edit_text"
                android:padding="@dimen/_10sdp"
                android:textSize="@dimen/_12sdp"
                android:textColor="@color/gray"
                android:textStyle="bold" />

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/expire_date"
                android:textSize="@dimen/_12sdp"
                android:textColor="@color/gray"
                android:layout_marginStart="@dimen/_8sdp"
                android:layout_marginTop="@dimen/_10sdp"/>

            <TextView
                android:id="@+id/expireDate"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_40sdp"
                android:text="@string/duedate"
                android:background="@drawable/background_edit_text"
                android:padding="@dimen/_10sdp"
                android:textSize="@dimen/_12sdp"
                android:textColor="@color/gray"
                android:textStyle="bold" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/skill_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/skills"
                android:textSize="@dimen/_12sdp"
                android:textColor="@color/gray"
                android:layout_marginStart="@dimen/_8sdp"
                android:layout_marginTop="@dimen/_10sdp"/>
            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/skills_rc"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/skill_tv"
                android:layout_marginStart="@dimen/_10sdp"
                android:layout_marginTop="@dimen/_8sdp"
                android:layout_marginEnd="@dimen/_10sdp"
                android:orientation="horizontal"
                tools:listitem="@layout/item_tag"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager" />

            <TextView
                android:id="@+id/skills"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_40sdp"
                android:text="@string/addskills"
                android:textColor="@color/gray"
                android:background="@drawable/background_edit_text"
                android:padding="@dimen/_10sdp"
                android:textSize="@dimen/_12sdp"
                android:textStyle="bold" />

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/description"
                android:textSize="@dimen/_12sdp"
                android:textColor="@color/gray"
                android:layout_marginStart="@dimen/_8sdp"
                android:layout_marginTop="@dimen/_10sdp"/>

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/description"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_40sdp"
                android:background="@drawable/background_edit_text"
                android:padding="@dimen/_10sdp"
                android:textSize="@dimen/_12sdp"
                android:textColor="@color/gray"
                android:textStyle="bold" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/createNewPost"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_35sdp"
                android:layout_marginStart="@dimen/_15sdp"
                android:layout_marginTop="@dimen/_8sdp"
                android:layout_marginEnd="@dimen/_15sdp"
                android:layout_marginBottom="@dimen/_8sdp"
                android:background="@drawable/background_button"
                android:gravity="center"
                android:text="@string/post"
                android:textColor="@color/white"
                android:textSize="@dimen/_14sdp" />
        </LinearLayout>

    </LinearLayout>
</ScrollView>