<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/backgroundNav"
   >

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/imageCompany"
        android:layout_width="@dimen/_50sdp"
        android:layout_height="@dimen/_50sdp"
        android:layout_alignParentStart="true"
        android:layout_marginTop="@dimen/_15sdp"
        android:layout_marginStart="@dimen/_15sdp"

        android:src="@drawable/cover"
        />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/nameCompany"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toEndOf="@+id/imageCompany"
        android:layout_marginStart="@dimen/_15sdp"
        android:layout_marginTop="@dimen/_15sdp"
        android:layout_marginBottom="@dimen/_8sdp"
        android:textColor="@color/white"
        android:textSize="@dimen/_12sdp"
        android:textStyle="bold"
        android:text="@string/user_name" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tagCompany"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/nameCompany"
        android:layout_alignStart="@+id/nameCompany"
        android:textSize="@dimen/_7sdp"
        android:gravity="center"
        android:textStyle="bold"
        android:padding="@dimen/_4sdp"
        android:background="@drawable/background_item_tag"
        android:text="@string/app_name" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/createPost"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/_30sdp"
        android:layout_marginTop="@dimen/_15sdp"
        android:layout_marginBottom="@dimen/_5sdp"
        android:layout_below="@id/tagCompany"
        android:fontFamily="@font/material_icon"
        android:textColor="@color/white"
        android:textStyle="bold"
        android:layout_centerHorizontal="true"
        android:paddingStart="@dimen/_10sdp"
        android:paddingEnd="@dimen/_10sdp"
        android:background="@drawable/background_button"
        android:text="@string/create_post"
        android:gravity="center"
        android:textSize="@dimen/_14sdp"
        />
</RelativeLayout>